ingress-example/service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /ingress/apple
          backend:
            serviceName: apple-service
            servicePort: 5678
        - path: /ingress/banana
          backend:
            serviceName: banana-service
            servicePort: 5678
